; ModuleID = '/home/carl/AnghaBench/git/extr_advice.c_error_resolve_conflict.c'
source_filename = "/home/carl/AnghaBench/git/extr_advice.c_error_resolve_conflict.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"cherry-pick\00", align 1
@.str.1 = private unnamed_addr constant [64 x i8] c"Cherry-picking is not possible because you have unmerged files.\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"commit\00", align 1
@.str.3 = private unnamed_addr constant [60 x i8] c"Committing is not possible because you have unmerged files.\00", align 1
@.str.4 = private unnamed_addr constant [6 x i8] c"merge\00", align 1
@.str.5 = private unnamed_addr constant [57 x i8] c"Merging is not possible because you have unmerged files.\00", align 1
@.str.6 = private unnamed_addr constant [5 x i8] c"pull\00", align 1
@.str.7 = private unnamed_addr constant [57 x i8] c"Pulling is not possible because you have unmerged files.\00", align 1
@.str.8 = private unnamed_addr constant [7 x i8] c"revert\00", align 1
@.str.9 = private unnamed_addr constant [59 x i8] c"Reverting is not possible because you have unmerged files.\00", align 1
@.str.10 = private unnamed_addr constant [58 x i8] c"It is not possible to %s because you have unmerged files.\00", align 1
@advice_resolve_conflict = common dso_local global i64 0, align 8
@.str.11 = private unnamed_addr constant [116 x i8] c"Fix them up in the work tree, and then use 'git add/rm <file>'\0Aas appropriate to mark resolution and make a commit.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @error_resolve_conflict(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = call i32 @strcmp(i8* %3, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = call i32 @_(i8* getelementptr inbounds ([64 x i8], [64 x i8]* @.str.1, i64 0, i64 0))
  %8 = call i32 (i32, ...) @error(i32 %7)
  br label %45

9:                                                ; preds = %1
  %10 = load i8*, i8** %2, align 8
  %11 = call i32 @strcmp(i8* %10, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %16, label %13

13:                                               ; preds = %9
  %14 = call i32 @_(i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str.3, i64 0, i64 0))
  %15 = call i32 (i32, ...) @error(i32 %14)
  br label %44

16:                                               ; preds = %9
  %17 = load i8*, i8** %2, align 8
  %18 = call i32 @strcmp(i8* %17, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.4, i64 0, i64 0))
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %23, label %20

20:                                               ; preds = %16
  %21 = call i32 @_(i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str.5, i64 0, i64 0))
  %22 = call i32 (i32, ...) @error(i32 %21)
  br label %43

23:                                               ; preds = %16
  %24 = load i8*, i8** %2, align 8
  %25 = call i32 @strcmp(i8* %24, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.6, i64 0, i64 0))
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %30, label %27

27:                                               ; preds = %23
  %28 = call i32 @_(i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str.7, i64 0, i64 0))
  %29 = call i32 (i32, ...) @error(i32 %28)
  br label %42

30:                                               ; preds = %23
  %31 = load i8*, i8** %2, align 8
  %32 = call i32 @strcmp(i8* %31, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.8, i64 0, i64 0))
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %37, label %34

34:                                               ; preds = %30
  %35 = call i32 @_(i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str.9, i64 0, i64 0))
  %36 = call i32 (i32, ...) @error(i32 %35)
  br label %41

37:                                               ; preds = %30
  %38 = call i32 @_(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.10, i64 0, i64 0))
  %39 = load i8*, i8** %2, align 8
  %40 = call i32 (i32, ...) @error(i32 %38, i8* %39)
  br label %41

41:                                               ; preds = %37, %34
  br label %42

42:                                               ; preds = %41, %27
  br label %43

43:                                               ; preds = %42, %20
  br label %44

44:                                               ; preds = %43, %13
  br label %45

45:                                               ; preds = %44, %6
  %46 = load i64, i64* @advice_resolve_conflict, align 8
  %47 = icmp ne i64 %46, 0
  br i1 %47, label %48, label %51

48:                                               ; preds = %45
  %49 = call i32 @_(i8* getelementptr inbounds ([116 x i8], [116 x i8]* @.str.11, i64 0, i64 0))
  %50 = call i32 @advise(i32 %49)
  br label %51

51:                                               ; preds = %48, %45
  ret i32 -1
}

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i32 @error(i32, ...) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @advise(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
